--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@purista/view",
-  "description": "A visualizer for your distributed PURISTA based solution",
+  "name": "@purista/voyage",
+  "description": "PURISTA Voyage - A visualizer for your distributed PURISTA based solution",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -15,26 +15,55 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@openapi-contrib/openapi-schema-to-json-schema": "^4.0.5",
+    "@vue-flow/controls": "^1.1.0",
+    "@vue-flow/core": "^1.20.1",
+    "@vue-flow/minimap": "^1.1.1",
+    "@vueuse/core": "^10.1.2",
     "element-plus": "^2.3.6",
+    "elkjs": "^0.8.2",
+    "fast-sort": "^3.4.0",
+    "graphology": "^0.25.1",
+    "highlight.js": "^11.8.0",
+    "markdown-it": "^13.0.1",
+    "mermaid": "^10.2.2",
     "pinia": "^2.0.36",
+    "pino": "^8.14.1",
+    "sinon": "^15.1.0",
+    "ts-deepmerge": "^6.0.3",
+    "uuid": "^9.0.0",
     "vue": "^3.3.2",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.2.0",
+    "zod-to-ts": "^1.1.4"
   },
   "devDependencies": {
+    "@purista/core": "^1.7.1",
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.1",
     "@types/jsdom": "^21.1.1",
+    "@types/markdown-it": "^12.2.3",
     "@types/node": "^18.16.8",
+    "@types/uuid": "^9.0.2",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.3.2",
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-vue": "^9.11.0",
     "jsdom": "^22.0.0",
+    "mdi-mermaid": "^0.3.18",
     "npm-run-all": "^4.1.5",
+    "openapi-types": "^12.1.3",
     "prettier": "^2.8.8",
+    "sass": "^1.62.1",
     "typescript": "~5.0.4",
     "unplugin-auto-import": "^0.16.4",
     "unplugin-vue-components": "^0.25.1",
