--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "pinia": "^2.0.36",
     "pino": "^8.14.1",
     "sinon": "^15.1.0",
+    "splitpanes": "^3.1.5",
+    "swagger-ui": "^5.0.0",
     "ts-deepmerge": "^6.0.3",
     "uuid": "^9.0.0",
     "vue": "^3.3.2",
@@ -43,6 +45,8 @@
     "@types/jsdom": "^21.1.1",
     "@types/markdown-it": "^12.2.3",
     "@types/node": "^18.16.8",
+    "@types/splitpanes": "^2.2.1",
+    "@types/swagger-ui": "^3.52.0",
     "@types/uuid": "^9.0.2",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-prettier": "^7.1.0",
